--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,10 +7,14 @@
 <br>
 
 <div class="row" style="display: inline-block; width: 100%">
+
+
+{{> modals}}
+
+
     <div class="col-10" style="float: left">
 
         <div id="cardsGoHere" style="display: inline">
-
             {{#each seltzers}}
             <div class="card" style="width: 300px; height: 400px; text-align: center">
                 <img class="card-img-top" style="width: 70%" src="{{this.seltzerID}}.jpeg" alt="Card image cap">
@@ -29,75 +33,41 @@
         </div>
     </div>
 
-    <div class="col-2" style="float: right; text-align: center; position: fixed; right: 20px; height: 80%; background-color: #efefef">
+    <div class="col-2" style="float: right; text-align: center; position: fixed; right: 20px; height: 80%; background-color: #efefef; z-index:99; ">
 
-        <div class="shadow p-3 mb-5 bg-white" style="margin-right: -20px; margin-left: -22px">
+        <div class="shadow p-3 mb-5 bg-white" style="margin-right: -20px; margin-left: -20px;">
             <h3 style="color: #7b7b7b;">Personal Cart</h3>
         </div>
 
-        <div class="card" style="width: 100%;">
-            <div class="row">
-                <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
-                <div style="max-width: 50%">
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
-                </div>
-                <div >
-                    <i class="fas fa-times" style="font-size: 25px"></i>
-                </div>
-            </div>
-        </div>
-
-        <div class="card" style="width: 100%;">
-            <div class="row">
-                <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
-                <div style="max-width: 50%">
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
-                </div>
-                <div >
-                    <i class="fas fa-times" style="font-size: 25px"></i>
+        <div id="addToCart" style="margin-top: -47px; max-height: 85%; overflow-y: scroll; z-index:1; overflow-x: hidden;">
+            <div class="card" style="width: 100%;">
+                <div class="row">
+                    <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
+                    <div style="max-width: 50%">
+                        <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
+                        <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
+                        <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-times" style="font-size: 25px"></i>
+                    </div>
                 </div>
             </div>
+
+
         </div>
-
-        <div class="card" style="width: 100%;">
-            <div class="row">
-                <img class="card-img-top" src="polar.jpg" alt="Card image cap" style="width: 80px; height: 80px; margin-left: 8%">
-                <div style="max-width: 50%">
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">Polar</p>
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">100% Natural Seltzer Jr</p>
-                    <p style="margin: 0; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">$9.99</p>
-                </div>
-                <div >
-                    <i class="fas fa-times" style="font-size: 25px"></i>
-                </div>
-            </div>
-        </div>
-
-        <a href="#" class="btn btn-primary" style="font-weight: bold; width: 100%; bottom: 0px; position: absolute; right: 0px; height: 65px; font-size: 30px">Checkout</a>
-        <!-- <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="..." alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div> -->
-
-        <!-- <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="..." alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div> -->
-
     </div>
 </div>
+
+<script>
+    $(document).ready(function(){
+        // do something here
+    });
+
+</script>
+
+
+
 </body>
 
 </html>
