--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>{{title}}</title>
 
-    <title>Assignment 4</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
@@ -17,6 +16,9 @@
           crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
+
+    <!--MODALS-->
+
 
 
     <style>
@@ -44,6 +46,20 @@
         .card-title {
             color: #7b7b7b;
         }
+
+        .btn:hover {
+            background-color: #53d8ca;
+            border-color: #53d8ca;
+        }
+
+        .btn:focus,
+        .btn:active {
+            outline: #00b8a4 !important;
+            background-color: #00b8a4;
+            box-shadow: none;
+            color:red;
+        }
+
     </style>
 </head>
 <body>
