--- a/views/partials/modals.hbs
+++ b/views/partials/modals.hbs
@@ -4,8 +4,27 @@
 
 
 
+{{#if isLoggedIn}}
+    <div class="modal fade bannerformmodal" tabindex="-1" role="dialog" id="loggedInModal">
+        <div class="modal-dialog modal-sm">
+            <div style="width: max-content; "class="modal-content">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Hi {{username}}</h4>
+                        <button type="button" class="close" data-dismiss="modal" >&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <h5>Hope you're enjoying using fizz.</h5>
+                    </div>
 
-
+                    <div class="modal-footer">
+                        <button class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span>Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{{else}}
 <div class="modal fade bannerformmodal" tabindex="-1" role="dialog" id="signInModal">
     <div class="modal-dialog modal-sm">
         <div style="width: max-content; "class="modal-content">
@@ -15,7 +34,7 @@
                     <button type="button" class="close" data-dismiss="modal" >&times;</button>
                 </div>
                 <div class="modal-body">
-                    <form id="signUp" method="POST" name="signIn">
+                    <form id="signIn">
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-envelope"></i></span>
@@ -52,7 +71,6 @@
                 </div>
                 <div class="modal-body">
                     <form id="signUp">
-
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-user"></i></span>
@@ -62,25 +80,18 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                                <input id="signUpEmail" type="email" class="form-control" placeholder="Email" name="email"/>
+                                <input id="signUpEmail" type="text" class="form-control" placeholder="Email" name="email"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-key"></i></span>
-                                <input id="password" type="text" class="form-control" placeholder="Password" name="password"/>
+                                <input id="signUppassword" type="password" class="form-control" placeholder="Password" name="password"/>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <span style='width: 20px' class="input-group-addon"><i class="fa fa-key"></i></span>
-                                <input id="confirmPassword" type="text" class="form-control" placeholder="Confirm Password" name="cPassword"/>
-                            </div>
-                        </div>
-
                         <div>
                         <!--suppress CssInvalidPropertyValue -->
-                            <button style="width: -webkit-fill-available;" data-dismiss="modal" id="signInSubmit" class="btn btn-blue">Submit</button>
+                            <button style="width: -webkit-fill-available;" id="signInSubmit" class="btn btn-blue">Submit</button>
                         </div>
                     </form>
                 </div>
@@ -93,6 +104,7 @@
         </div>
     </div>
 </div>
+{{/if}}
 
 <script type="text/javascript">
     function signingUp() {
@@ -103,13 +115,27 @@
 
 <script>
     $(function () {
-        $("#signInSubmit").click(function(){
-            alert($('#signUpEmail').val());
-            newUser= {
-                name: $('#password').val(),
-                email: $('#password').val(),
-                password: $('#password').val()
-            }
+        $("#signInSubmit").click(function(event) {
+            event.preventDefault();
+            newUser = {
+                name: $('#first_name').val(),
+                email: $('#signUpEmail').val(),
+                password: $('#signUppassword').val()
+            };
+
+            $.ajax({
+                url: '/signup',
+                type: "POST",
+                contentType: 'application/JSON',
+                data: JSON.stringify(newUser),
+                success: function (reponse) {
+                    alert("success");
+                    $('.modal-body').replaceWith('<h4>Succesful Login, redirecting </h4> <br> <h5> Redirecting </h5>');
+                    setTimeout(function () {
+                        location.reload();
+                    }, 2000)
+                }
+            });
         })
-    });
+    })
 </script>
