--- a/views/partials/modals.hbs
+++ b/views/partials/modals.hbs
@@ -24,7 +24,11 @@
             </div>
         </div>
     </div>
+
+
 {{else}}
+
+
 <div class="modal fade bannerformmodal" tabindex="-1" role="dialog" id="signInModal">
     <div class="modal-dialog modal-sm">
         <div style="width: max-content; "class="modal-content">
@@ -38,21 +42,22 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-envelope"></i></span>
-                                <input id="email" type="email" class="form-control" placeholder="Email" name="email1" required = "required"/>
+                                <input id="signInEmail" type="email" class="form-control" placeholder="Email" name="email1" required = "required"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-key"></i></span>
-                                <input id="password" type="text" class="form-control" placeholder="Password" name="password"/>
+                                <input id="signInPassword" type="text" class="form-control" placeholder="Password" name="password"/>
                             </div>
                         </div>
                     </form>
                 </div>
 
                 <div class="modal-footer">
-                    <button data-dismiss="modal" aria-hidden="true" type="button" class="btn btn-blue">Submit</button>
-                    <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                    <button id="signInSubmit" type="button" class="btn btn-blue">Submit</button>
+                    <button  class="btn btn-danger btn-default pull-left" data-dismiss="modal">
+                        <span data-dismiss="modal" class="glyphicon glyphicon-remove"></span> Cancel</button>
                     <p style="margin: auto";>Not a member? <a id="signUp" href="javascript:signingUp()">Sign Up</a></p>
                 </div>
             </div>
@@ -74,7 +79,7 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-user"></i></span>
-                                <input id="first_name" type="text" class="form-control" placeholder="First Name" name="fName"/>
+                                <input id="signUpName" type="text" class="form-control" placeholder="First Name" name="fName"/>
                             </div>
                         </div>
                         <div class="form-group">
@@ -86,12 +91,12 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span style='width: 20px' class="input-group-addon"><i class="fa fa-key"></i></span>
-                                <input id="signUppassword" type="password" class="form-control" placeholder="Password" name="password"/>
+                                <input id="signUpPassword" type="password" class="form-control" placeholder="Password" name="password"/>
                             </div>
                         </div>
                         <div>
                         <!--suppress CssInvalidPropertyValue -->
-                            <button style="width: -webkit-fill-available;" id="signInSubmit" class="btn btn-blue">Submit</button>
+                            <button style="width: -webkit-fill-available;" type="button" id="signUpSubmit" class="btn btn-blue">Submit</button>
                         </div>
                     </form>
                 </div>
@@ -115,12 +120,13 @@
 
 <script>
     $(function () {
-        $("#signInSubmit").click(function(event) {
+        $("#signUpSubmit").click(function(event) {
             event.preventDefault();
+            alert("called");
             newUser = {
-                name: $('#first_name').val(),
+                name: $('#signUpName').val(),
                 email: $('#signUpEmail').val(),
-                password: $('#signUppassword').val()
+                password: $('#signUpPassword').val()
             };
 
             $.ajax({
@@ -128,12 +134,38 @@
                 type: "POST",
                 contentType: 'application/JSON',
                 data: JSON.stringify(newUser),
-                success: function (reponse) {
+                success: function () {
                     alert("success");
-                    $('.modal-body').replaceWith('<h4>Succesful Login, redirecting </h4> <br> <h5> Redirecting </h5>');
+                    $('.modal-body').replaceWith('<h4>Succesful Sign Up </h4> <br> <h5> Redirecting </h5>');
                     setTimeout(function () {
                         location.reload();
                     }, 2000)
+                }
+            });
+        })
+
+        $("#signInSubmit").click(function(event) {
+            event.preventDefault();
+            lookupUser = {
+                email: $('#signInEmail').val(),
+                password: $('#signInPassword').val()
+            };
+
+            $.ajax({
+                url: '/login',
+                type: "POST",
+                contentType: 'application/JSON',
+                data: JSON.stringify(lookupUser),
+                success: function (response) {
+                    alert("success");
+                    $('.modal-body').replaceWith('<h4>Succesful Login </h4> <br> <h5> Redirecting </h5>');
+                    setTimeout(function () {
+                        location.reload();
+                    }, 2000)
+                },
+
+                error: function () {
+                    alert("could not find user");
                 }
             });
         })
