--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
                     <h5 class="card-title">{{this.seltzer}}</h5>
                     <p class="card-title" style="margin-top: -15px;">{{this.size}}</p>
                     <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">{{this.price}}</h3>
-                    <a href="#" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
+                    <a id = "cartIt" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
                     <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
                         <i class="fas fa-heart"></i>
                     </a>
@@ -64,7 +64,15 @@
 
 <script>
     $(document).ready(function(){
-        // do something here
+        $('#cartIt').click(function(){
+            if ($('#loginA').text() == 'Log in'){
+                alert('not logged in');
+            }else{
+                //check quantity
+                //add item to users cart
+
+            }
+        })
     });
 
 </script>
