--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -30,7 +30,7 @@
         <i class="fas fa-user" style="font-size: 30px; color: white; margin-right: 20px;"></i>
       </span>
         <span class="navbar-text">
-        <i class="fas fa-shopping-cart" style="font-size: 30px; color: white"></i>
+        <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: white"></i>
       </span>
     </div>
 </nav>
