--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,3 @@
-<body>
-
 
 {{> header}}
 
@@ -22,7 +20,10 @@
                     <h5 class="card-title">{{this.seltzer}}</h5>
                     <p class="card-title" style="margin-top: -15px;">{{this.size}}</p>
                     <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">{{this.price}}</h3>
-                    <a id = "cartIt" class="btn btn-primary" style="display: inline-block; font-weight: bold">Add to Cart</a>
+                    <div class="popup">
+                        <a id = "cartIt" class="btn btn-primary cart" style="display: inline-block; font-weight: bold">Add to Cart</a>
+                        <span class="popuptext" id="myPopup">This site is pretty exclusive! Log in to cart.</span>
+                    </div>
                     <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
                         <i class="fas fa-heart"></i>
                     </a>
@@ -75,14 +76,17 @@
 
 <script>
     $(document).ready(function(){
-        $('#cartIt').click(function(){
+        $('.cart').each(function(){
+            $(this).click(function(){
+            var thePopup = $(this).next('span');
             if ($('#loginA').text() == 'Log in'){
-                alert('not logged in');
+                  thePopup.toggleClass("show");
             }else{
                 //check quantity
                 //add item to users cart
             }
-        })
+            })
+        });
         $('#shoppingCartIcon').on("click", function(){
            if($('#shoppingCart').is(":hidden") ){
                $('#shoppingCart').show();
@@ -95,9 +99,3 @@
 
 
 </script>
-
-
-
-</body>
-
-</html>
