--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,8 +21,14 @@
                     <p class="card-title" style="margin-top: -15px;">{{this.size}}</p>
                     <h3 style="font-weight: bold; color: #00b8a4; margin-top: -10px;">{{this.price}}</h3>
                     <div class="popup">
+                        {{#if this.quantity}}
+
                         <a id = "cartIt" class="btn btn-primary cart" style="display: inline-block; font-weight: bold">Add to Cart</a>
                         <span class="popuptext" id="myPopup">This site is pretty exclusive! Log in to cart.</span>
+                        {{else}}
+                            <button class="btn btn-primary noHover" disabled="disabled" style="display: inline-block; font-weight: bold">Out of Stock</button>
+
+                        {{/if}}
                     </div>
                     <a href="#" class="btn btn-primary" style="display: inline-block; width: 42px">
                         <i class="fas fa-heart"></i>
