--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -32,6 +32,21 @@
             height: 100%;
         }
 
+        .btn-static {
+            background-color: white;
+            border: 1px solid lightgrey;
+            cursor: default;
+        }
+        .btn-static:active {
+            -moz-box-shadow:    inset 0 0 0px white;
+            -webkit-box-shadow: inset 0 0 0px white;
+            box-shadow:         inset 0 0 0px white;
+        }
+
+        .noHover{
+            pointer-events: none; !important;
+        }
+
         .cart{
 
         }
