--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -43,6 +43,12 @@
             box-shadow:         inset 0 0 0px white;
         }
 
+        .btn-primary.disabled, .btn-primary:disabled {
+            color: #fff;
+            background-color: #007460;
+            border-color: #007460;
+        }
+
         .noHover{
             pointer-events: none; !important;
         }
