control page init

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,7 +44,7 @@
     {{else}}
     <div id="shoppingCart" class="col-2" style="float: right; text-align: center; position: fixed; right: 20px; height: 80%; background-color: #efefef; z-index:99; display: none;">
         <div class="shadow p-3 mb-5 bg-white" style="margin-right: -20px; margin-left: -20px;">
-<h3 style="color: #7b7b7b;">Personal Cart</h3>
+            <h3 style="color: #7b7b7b;">Personal Cart</h3>
         </div>
         <h3 style="color: #7b7b7b;">There doesn't appear to be anything in your cart</h3>
     {{/if}}
@@ -87,6 +87,7 @@
             }
             })
         });
+
         $('#shoppingCartIcon').on("click", function(){
            if($('#shoppingCart').is(":hidden") ){
                $('#shoppingCart').show();
@@ -94,8 +95,10 @@
                $('#shoppingCart').hide();
            }
         });
+
+        // Navigate to control page
+        $('#user').on("click", function() {
+            window.location = '/control';
+        });
     });
-
-
-
 </script>
