--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <nav class="shadow navbar sticky-top navbar-dark navbar-expand-md" style="background-image: linear-gradient(to right, #00b8a4 , #5bdacc) !important;">
-    <a class="navbar-brand" href="#" style="color:white; font-size: 30px; font-weight: bold">Fizz</a>
+    <a class="navbar-brand" href="/" style="color:white; font-size: 30px; font-weight: bold">Fizz</a>
     <button class="navbar-toggler" style="border-color: white;" type="button" data-toggle="collapse" data-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
             {{/if}}
     </span>
         <span class="navbar-text">
-        <i class="fas fa-user" style="font-size: 30px; color: white; margin-right: 20px;"></i>
+        <i id="user" class="fas fa-user" style="font-size: 30px; color: white; margin-right: 20px;"></i>
       </span>
         <span class="navbar-text">
         <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: white"></i>
