--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,11 +21,6 @@
 
 
     <style>
-        /* html,
-        body,
-        div {
-          height: 100%;
-        } */
 
         html,
         body {
@@ -83,6 +78,12 @@
             box-shadow: none;
             color:red;
         }
+
+        .col-centered {
+        float: none;
+        margin: 0 auto;
+        }
+
         .popup {
             position: relative;
             display: inline-block;
