--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -24,7 +24,10 @@
                 {{#if isTransactions}}
                     <a id="loginA" class="nav-link" data-toggle="modal" data-target="#loggedInModal" style="color: white; text-decoration: underline; font-weight: bold; font-size: 20px" href="#">{{username}}</a>
                 {{else}}
-                    <a id="loginA" class="nav-link" data-toggle="modal" data-target="#loggedInModal" style="color: white; text-decoration: underline; font-weight: bold; font-size: 20px" href="#">{{username}}</a><a id="logout" class="nav-link" style="color: white; text-decoration: underline; font-weight: bold; font-size: 15px">SIGN OUTt</a>
+                        <a id="loginA" class="nav-link" data-toggle="modal" data-target="#loggedInModal" style="color: white; text-decoration: underline; font-weight: bold; font-size: 20px" href="#">{{username}}</a>
+                    </span>
+                    <span class="navbar-text">
+                        <a id="logout" class="nav-link" style="color: white; text-decoration: underline; font-weight: bold; font-size: 20px">SIGN OUT</a>
                 {{/if}}
             {{else}}
                 {{#unless isTransactions}}
