Header and Sign-In Changes

--- a/header.hbs
+++ b/header.hbs
@@ -42,17 +42,17 @@
             {{#if isLoggedIn}}
                 <i id="user" class="fas fa-user" style="font-size: 30px; color: white; margin-right: 20px;"></i>
             {{else}}
-                <i id="user2" class="fas fa-user" style="font-size: 30px; color: gray; margin-right: 20px;"></i>
+                <i id="user2" class="fas fa-user" style="font-size: 30px; color: #58a598; margin-right: 20px;"></i>
             {{/if}}
         </span>
         <span class="navbar-text">
             {{#if isTransactions}}
-                <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: gray"></i>
+                <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: #58a598"></i>
             {{else}}
                 {{#if isLoggedIn}}
                     <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: white"></i>
                 {{else}}
-                    <i id="shoppingCartIcon2" class="fas fa-shopping-cart" style="font-size: 30px; color: gray"></i>
+                    <i id="shoppingCartIcon2" class="fas fa-shopping-cart" style="font-size: 30px; color: #58a598"></i>
                 {{/if}}
             {{/if}}
         </span>
