--- a/modals.hbs
+++ b/modals.hbs
@@ -69,41 +69,41 @@
 <div class="modal fade bannerformmodal" tabindex="-1" role="dialog" aria-labelledby="bannerformmodal" aria-hidden="true" id="signUpModal">
     <div class="modal-dialog modal-sm">
         <div style="width: max-content; "class="modal-content">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
+            <div class="modal-content" style="border-color: #1e8e82">
+                <div class="modal-header" style="background-color: #00b8a4;">
+                    <h4 class="modal-title" style="color:white" id="myModalLabel">Sign Up</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form id="signUp">
                         <div class="form-group">
                             <div class="input-group">
-                                <span style='width: 20px' class="input-group-addon"><i class="fa fa-user"></i></span>
+                                <span style='width: 20px; color: #7b7b7b' class="input-group-addon"><i class="fa fa-user"></i></span>
                                 <input id="signUpName" type="text" class="form-control" placeholder="First Name" name="fName"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <span style='width: 20px' class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                                <span style='width: 20px; color: #7b7b7b' class="input-group-addon"><i class="fa fa-envelope"></i></span>
                                 <input id="signUpEmail" type="text" class="form-control" placeholder="Email" name="email"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="input-group">
-                                <span style='width: 20px' class="input-group-addon"><i class="fa fa-key"></i></span>
+                                <span style='width: 20px; color: #7b7b7b' class="input-group-addon"><i class="fa fa-key"></i></span>
                                 <input id="signUpPassword" type="password" class="form-control" placeholder="Password" name="password"/>
                             </div>
                         </div>
                         <div>
                         <!--suppress CssInvalidPropertyValue -->
-                            <button style="width: -webkit-fill-available;" type="button" id="signUpSubmit" class="btn btn-blue">Submit</button>
+                            <button style="width: -webkit-fill-available; background-color: #00b8a4; color:white" type="button" id="signUpSubmit" class="btn btn-blue">Submit</button>
                         </div>
                     </form>
                 </div>
 
                 <div class="modal-footer">
                     <!--suppress CssInvalidPropertyValue -->
-                    <button style="width: -webkit-fill-available;" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span>Cancel Signing up</button>
+                    <button style="width: -webkit-fill-available; background-color: #58a598; color:white; border-color: #58a598" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span>Cancel</button>
                 </div>
             </div>
         </div>
