--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,8 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarText">
 
         <ul class="navbar-nav mr-auto">
-            <input class="form-control mr-sm-2" style="width: 400px" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" style="color: white; border-color: white;" type="submit">Search</button>
+            {{!-- <input class="form-control mr-sm-2" style="width: 400px" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" style="color: white; border-color: white;" type="submit">Search</button> --}}
             <!-- <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li> -->
@@ -42,17 +42,17 @@
             {{#if isLoggedIn}}
                 <i id="user" class="fas fa-user" style="font-size: 30px; color: white; margin-right: 20px;"></i>
             {{else}}
-                <i id="user2" class="fas fa-user" style="font-size: 30px; color: gray; margin-right: 20px;"></i>
+                <i id="user2" class="fas fa-user" style="font-size: 30px; color: #58a598; margin-right: 20px;"></i>
             {{/if}}
         </span>
         <span class="navbar-text">
             {{#if isTransactions}}
-                <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: gray"></i>
+                <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: #58a598"></i>
             {{else}}
                 {{#if isLoggedIn}}
                     <i id="shoppingCartIcon" class="fas fa-shopping-cart" style="font-size: 30px; color: white"></i>
                 {{else}}
-                    <i id="shoppingCartIcon2" class="fas fa-shopping-cart" style="font-size: 30px; color: gray"></i>
+                    <i id="shoppingCartIcon2" class="fas fa-shopping-cart" style="font-size: 30px; color: #58a598"></i>
                 {{/if}}
             {{/if}}
         </span>
