--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,7 +72,9 @@
             </div>
         </div> <br><br>
         {{/each}}
-
+        <div style="position: absolute; bottom: 0; width: 80%;">
+            <button class="btn my-2 my-sm-0" style="color: black; background-color: #00b8a4; border-color: white; font-size: 40px;" type="submit">Checkout</button>
+        </div>
     </div>
 </div>
 </div>
