--- a/index.hbs
+++ b/index.hbs
@@ -1,3 +1,4 @@
+
  {{> header}}
 
 <!-- END OF NAVBAR -->
@@ -120,7 +121,7 @@
             })
         });
 
-        $('.remCart').each(function(){
+        $('.fa-times').each(function(){
             $(this).click(function(e){
                 e.preventDefault();
                 //check quantity
