Remove From Cart Fix

--- a/index.hbs
+++ b/index.hbs
@@ -121,7 +121,7 @@
             })
         });
 
-        $('.fa-times').each(function(){
+        $('.remCart').each(function(){
             $(this).click(function(e){
                 e.preventDefault();
                 //check quantity
