--- a/views/control.hbs
+++ b/views/control.hbs
@@ -5,7 +5,8 @@
 
 <div class="row" style="display: inline-block; width: 100%">
     <div class="col-10 col-centered" style="float: center">
-        <h4 style="text-align: center; color: #7b7b7b; font-size: 50px">Shopping History <i class="fas fa-shopping-cart"></i></h4>
+                <h4 style="text-align: center; color: #7b7b7b; font-size: 50px">Shopping History for {{username}}
+             <i class="fas fa-user" style="color: 7b7b7b;"></i></h4>
         <br>
         <table class="table" style="color:#7b7b7b">
             <thead>
@@ -49,7 +50,7 @@
             </div>
         </div>
         <div>
-            <button style="width: -webkit-fill-available;" type="button" id="passwordSubmit" class="btn btn-blue">Change Password</button>
+            <button style="width: -webkit-fill-available; background-color: #00b8a4; color:white; font-weight: bold" type="button" id="passwordSubmit" class="btn btn-blue">Change Password</button>
         </div>
     </div>
 </div>
