--- a/views/index.hbs
+++ b/views/index.hbs
@@ -73,7 +73,7 @@
         </div> <br><br>
         {{/each}}
         <div style="position: absolute; bottom: 0; width: 80%;">
-            <button class="btn my-2 my-sm-0" style="color: black; background-color: #00b8a4; border-color: white; font-size: 40px;" type="submit">Checkout</button>
+            <button id="checkout" class="btn my-2 my-sm-0" style="color: black; background-color: #00b8a4; border-color: white; font-size: 40px;" type="submit">Checkout</button>
         </div>
     </div>
 </div>
@@ -127,6 +127,25 @@
              })
         });
 
+        // Checks a user out of the store
+        $('#checkout').on("click", function(){
+            event.preventDefault();
+
+            $.ajax({
+                url: '/checkout',
+                type: 'POST',
+                success: function (response) {
+                    // TODO success message
+                    alert("success");
+                    location.reload();
+                },
+                error: function () {
+                    // TODO fail message
+                    alert("fail to checkout");
+                }
+            });
+        });
+
         $('#shoppingCartIcon').on("click", function(){
            if($('#shoppingCart').is(":hidden") ){
                $('#shoppingCart').show();
@@ -153,12 +172,14 @@
                 type: "GET",
                 contentType: 'application/JSON',
                 success: function (response) {
+                    // TODO success message
                     setTimeout(function () {
                         location.reload();
                     }, 2000)
                 },
 
                 error: function () {
+                    // TODO fail message
                     alert("could not log user out");
                 }
             });
@@ -185,6 +206,7 @@
                 },
 
                 error: function () {
+                    // TODO fail message
                     alert("could not find user");
                 }
             });
