fixed popups added images

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -94,7 +94,7 @@
             $(this).click(function(e){
                 e.preventDefault();
             var thePopup = $(this).next('span');
-            if ($('#loginA').text() == 'Log in'){
+            if ($('#loginA').text() == 'SIGN IN'){
                   thePopup.toggleClass("show");
             }else{
                 //check quantity
